--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Home</title>
-</head>
-<body>
-    <h1>Selamat Datang di MangaMint Api</h1>
-    <p>Jangan lupa bernafas ya xiixixiix 😭</p>
-    <p>TESTING</p>
-    <nav>
-        <ul>
-            <li><a href="https://github.com/febryardiansyah/manga-api">Github</a></li>
-            <li><a href="https://instagram.com/febry_ardiansyah24">Instagram</a></li>
-            <li><a href="https://www.facebook.com/febry.ardiansyah.792/">Facebook</a></li>
-        </ul>
-    </nav>
-    <script src="index.js"></script>
-</body>
+  </head>
+  <body></body>
 </html>
